Vanish+ v1.3.0 — Bug fixes, modernização Java 21, update checker via GitHub